@@ -1,4 +1,4 @@
-"$Id: oid.csv,v 1.2 2007-04-16 21:53:09 adam Exp $"
+"$Id: oid.csv,v 1.3 2007-05-30 08:12:17 adam Exp $"
 TRANSYN, 2.1.1, "BER"
 TRANSYN, 1.0.2709.1.1, "ISO2709"
 GENERAL, 1.0.10161.2.1, "ISOILL-1"
@@ -107,6 +107,7 @@ USERINFO, Z3950_PREFIX.10.6, "DateTime"
 USERINFO, Z3950_PREFIX.10.1000.81.1, "Proxy"
 USERINFO, Z3950_PREFIX.10.1000.81.2, "Cookie"
 USERINFO, Z3950_PREFIX.10.1000.81.3, "Client-IP"
+USERINFO, Z3950_PREFIX.10.1000.81.4, "Scan-Set"
 ELEMSPEC, Z3950_PREFIX.11.1, "Espec-1"
 VARSET, Z3950_PREFIX.12.1, "Variant-1"
 SCHEMA, Z3950_PREFIX.13.1, "WAIS-schema"
